--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
 
                 </tr>
                 <tr>
+                    <td><a href="https://t.me/pixelizationaibot" rel="noopener noreferrer" target="_blank"
+                           title="Foxes!">Pixelization Bot</a>
+                    </td>
+                    <td>
+                        <p>Pixelization Bot, use AI for convert any image into pixel art like
+                        </p>
+                    </td>
+
+                </tr>
+                <tr>
                     <td><a href="https://github.com/Taruu/mailproxy-with-utils" rel="noopener noreferrer"
                            target="_blank">mailproxy</a></td>
                     <td>
