Fix mobile devices

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <meta content="Taruu's Personal Website" name="twitter:title">
     <meta content="Explore my projects, contacts, and social media links." name="twitter:description">
     <meta content="https://taruu.ru/assets/images/taruu.png" name="twitter:image">
-    <link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" rel="stylesheet">
     <link href="assets/styles/index.css" rel="stylesheet">
     <link href="assets/styles/fonts.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@300;700&display=swap" rel="stylesheet">
@@ -38,6 +37,7 @@
 </header>
 <main>
     <section class="my_contacts">
+        <div class="info_tables">
         <h2>My contacts</h2>
         <article>
             <div class="profile">
@@ -88,96 +88,99 @@
                 </table>
             </div>
         </article>
+        </div>
     </section>
     <section class="my_projects">
+        <div class="info_tables">
+            <h2>My projects</h2>
+            <article>
+                <table>
+                    <tr>
+                        <td><a href="https://thisfoxgirldoesnotexist.com/" rel="noopener noreferrer" target="_blank"
+                               title="Foxes!">thisfoxgirldoesnotexist.com</a>
+                        </td>
+                        <td>
+                            <p>This foxgirl does not exist. Foxgirl analog
+                                "This Person Does Not Exist"
+                            </p>
+                        </td>
 
-        <h2>My projects</h2>
-        <article>
-            <table>
-                <tr>
-                    <td><a href="https://thisfoxgirldoesnotexist.com/" rel="noopener noreferrer" target="_blank"
-                           title="Foxes!">thisfoxgirldoesnotexist.com</a>
-                    </td>
-                    <td>
-                        <p>This foxgirl does not exist. Foxgirl analog
-                            "This Person Does Not Exist"
-                        </p>
-                    </td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://t.me/pixelizationaibot" rel="noopener noreferrer" target="_blank"
+                               title="Foxes!">Pixelization Bot</a>
+                        </td>
+                        <td>
+                            <p>Pixelization Bot, use AI for convert any image into pixel art like
+                            </p>
+                        </td>
 
-                </tr>
-                <tr>
-                    <td><a href="https://t.me/pixelizationaibot" rel="noopener noreferrer" target="_blank"
-                           title="Foxes!">Pixelization Bot</a>
-                    </td>
-                    <td>
-                        <p>Pixelization Bot, use AI for convert any image into pixel art like
-                        </p>
-                    </td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://github.com/Taruu/mailproxy-with-utils" rel="noopener noreferrer"
+                               target="_blank">mailproxy</a></td>
+                        <td>
+                            <p>
+                                simple mail proxy for old programs.
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://taruu.github.io/xxhash_fast_hash_big_files/" rel="noopener noreferrer"
+                               target="_blank">
+                                xxhash browser demo
+                            </a>
+                        </td>
+                        <td>
+                            <p>
+                                demo for fastest file hash calculation in browser
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://radio.taruu.ru">radio.taruu.ru</a>
+                        </td>
+                        <td>
+                            <p>
+                                my music
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>
+                                    <a href="https://t.me/s/fox_folder" rel="noopener noreferrer">
+                                        @fox_folder
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://t.me/s/cat_folder" rel="noopener noreferrer">
+                                        @cat_folder
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://t.me/s/robot_folder" rel="noopener noreferrer">
+                                        @robot_folder
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://t.me/s/ai_folder" rel="noopener noreferrer">
+                                        @ai_folder
+                                    </a>
+                                </li>
+                            </ul>
+                        </td>
+                        <td>
+                            <p>cute images</p>
+                        </td>
+                    </tr>
+                </table>
+            </article>
+        </div>
 
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/Taruu/mailproxy-with-utils" rel="noopener noreferrer"
-                           target="_blank">mailproxy</a></td>
-                    <td>
-                        <p>
-                            simple mail proxy for old programs.
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="https://taruu.github.io/xxhash_fast_hash_big_files/" rel="noopener noreferrer"
-                           target="_blank">
-                            xxhash browser demo
-                        </a>
-                    </td>
-                    <td>
-                        <p>
-                            demo for fastest file hash calculation in browser
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="https://radio.taruu.ru">radio.taruu.ru</a>
-                    </td>
-                    <td>
-                        <p>
-                            my music
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <ul>
-                            <li>
-                                <a href="https://t.me/s/fox_folder" rel="noopener noreferrer">
-                                    @fox_folder
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://t.me/s/cat_folder" rel="noopener noreferrer">
-                                    @cat_folder
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://t.me/s/robot_folder" rel="noopener noreferrer">
-                                    @robot_folder
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://t.me/s/ai_folder" rel="noopener noreferrer">
-                                    @ai_folder
-                                </a>
-                            </li>
-                        </ul>
-                    </td>
-                    <td>
-                        <p>cute images</p>
-                    </td>
-                </tr>
-            </table>
-        </article>
     </section>
 
 </main>
