add discord link

--- a/index.html
+++ b/index.html
@@ -38,56 +38,60 @@
 <main>
     <section class="my_contacts">
         <div class="info_tables">
-        <h2>My contacts</h2>
-        <article>
-            <div class="profile">
-                <img alt="Taruu avatar" src="/assets/images/taruu.png">
-                <table>
-                    <tr>
-                        <td>Discord</td>
-                        <td>.taruu</td>
-                    </tr>
-                    <tr>
-                        <td>GitHub</td>
-                        <td>
-                            <a href="https://github.com/Taruu" rel="noopener noreferrer" target="_blank"
-                               title="Visit my GitHub profile">
-                                Taruu
+            <h2>My contacts</h2>
+            <article>
+                <div class="profile">
+                    <img alt="Taruu avatar" src="/assets/images/taruu.png">
+                    <table>
+                        <tr>
+                            <td>Discord</td>
+                            <td><a href="https://discordapp.com/users/489145337701859328" rel="noopener noreferrer"
+                                   target="_blank">
+                                .taruu
                             </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>VRChat</td>
-                        <td>
-                            <a href="https://vrchat.com/home/user/usr_95cbe9a9-f928-4807-8a26-6fffa042ef3b"
-                               rel="noopener noreferrer"
-                               target="_blank" title="Visit my VRChat profile">
-                                Taruu
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Telegram</td>
-                        <td>
-                            <a href="https://t.me/taruu_max" rel="noopener noreferrer" target="_blank"
-                               title="Visit my Telegram profile">
-                                @taruu_max
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Blog</td>
-                        <td>
-                            <a href="https://t.me/s/tailed_dev" rel="noopener noreferrer" target="_blank"
-                               title="Visit my Telegram blog channel">
-                                @tailed_dev
-                            </a>
-                        </td>
-                    </tr>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>GitHub</td>
+                            <td>
+                                <a href="https://github.com/Taruu" rel="noopener noreferrer" target="_blank"
+                                   title="Visit my GitHub profile">
+                                    Taruu
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>VRChat</td>
+                            <td>
+                                <a href="https://vrchat.com/home/user/usr_95cbe9a9-f928-4807-8a26-6fffa042ef3b"
+                                   rel="noopener noreferrer"
+                                   target="_blank" title="Visit my VRChat profile">
+                                    Taruu
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Telegram</td>
+                            <td>
+                                <a href="https://t.me/taruu_max" rel="noopener noreferrer" target="_blank"
+                                   title="Visit my Telegram profile">
+                                    @taruu_max
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Blog</td>
+                            <td>
+                                <a href="https://t.me/s/tailed_dev" rel="noopener noreferrer" target="_blank"
+                                   title="Visit my Telegram blog channel">
+                                    @tailed_dev
+                                </a>
+                            </td>
+                        </tr>
 
-                </table>
-            </div>
-        </article>
+                    </table>
+                </div>
+            </article>
         </div>
     </section>
     <section class="my_projects">
